Fixed mobile horizontal scrolling bug. (#15)
* Fixed mobile horizontal scrolling bug.

* Same as a75a4e4 but ABCd and linted.

* Same as 346c384 with additional ABCd sections and linted.

---------

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -11,8 +11,8 @@
 	grid-template-rows: min-content min-content auto min-content;
 	justify-content: center;
 	min-height: 100vh;
-	padding-bottom: 2rem;
-	padding-top: 0;
+	overflow-x: clip;
+	padding: 0 auto 2rem;
 	position: relative;
 	width: 100%;
 }
@@ -27,15 +27,12 @@
 	}
 
 	.logo {
-		width: 540px;
-
-		animation-name: scale-on-scroll;
 		animation-duration: 1ms;
 		animation-fill-mode: both;
+		animation-name: scale-on-scroll;
 		animation-timeline: view();
-
-		margin-top: -6rem;
-		margin-bottom: 60rem;
+		margin: -6rem auto 60rem;
+		width: 540px;
 	}
 }
 
@@ -102,9 +99,9 @@
 		opacity: 0.25;
 	}
 	100% {
-		transform: scale(0.25);
-		opacity: 0;
 		margin-bottom: -8rem;
+		opacity: 0;
+		transform: scale(0.25);
 	}
 }
 
@@ -156,9 +153,9 @@
 			opacity: 0.25;
 		}
 		100% {
-			transform: scale(0.2);
-			opacity: 0;
 			margin-bottom: -10rem;
+			opacity: 0;
+			transform: scale(0.2);
 		}
 	}
 }
